# digimon_application_20260215

./: .gitignore  AGENTS.md  CLAUDE.md  CURRENT_STATUS.md  FUNCTIONALITY.md  HANDOFF.md  HANDOFF_2026-03-23.md  ISSUES.md  KNOWLEDGE.md  MCP_QUICK_REFERENCE.md  Makefile  NEXT_STEPS.md  OVERNIGHT_PROGRESS.md  PROGRESS.md  README.md  digimon_mcp_stdio_server.py  meta-process.yaml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  test_cross_modal.py  test_hotpotqa.py  test_llm_operators.py  test_operators.py  test_qa_evaluation.py  test_qa_evaluation_pipeline.py  test_rkg_extraction.py
Config/: CLAUDE.md  ChunkConfig.py  EmbConfig.py  GraphConfig.py  LLMConfig.py  RetrieverConfig.py
Core/: CLAUDE.md  GraphRAG.py
Data/: CLAUDE.md
Option/: Config2.py
acceptance_gates/: digimon_v2_planning_phase.yaml
config/: config.yaml
docs/: ACTIVE_DOCS.md  BENCHMARK_OPTIMIZATION_PLAN.md  BENCHMARK_PROMOTION_POLICY.md  CLAUDE.md  COMPETITIVE_ANALYSIS.md  GLOSSARY.md  GRAPH_ATTRIBUTE_MODEL.md  GRAPH_ENRICHMENT.md  GRAPH_QUALITY_ISSUES.md  HANDOFF_TEMPLATE.md  IDEAS.md  RECURSIVE_REASONING_TRACE.md  REPO_SURFACE.md  SOTA_PATTERNS.md  SYSTEM_OVERVIEW.md  TOOL_CAPABILITY_MATRIX.md  benchmark_tool_definitions.json  benchmark_tool_definitions_compact.json  composability_handoff_for_chatgpt.md  composability_matrix_snapshot.json  digimon_information_for_struct_integration.md  digimon_onto_canon_ownership.md  handoff_2026_04_03.md  mcp_tool_schemas.json
eval/: BENCHMARK_NOTES.md  CLAUDE.md  DATASET_ERRATA.md  _chunk_lookup.py  _llm_counter.py  augment_similarity_edges.py  benchmark.py  benchmark_iteration_tasks.md  continuous_extraction_iteration.grounded_named_endpoint.yaml  data_prep.py  enrich_graph.py  experiment_log.jsonl  extraction_prompt_eval.py  graph_manifest.py  llm_judge.py  oracle_diagnostic.py  prebuild_graph.py  run_agent_benchmark.py  run_benchmark.py  run_build_and_benchmark.py  run_extraction_iteration_supervisor.py  run_overnight.sh
hooks/: CLAUDE.md
investigations/: 2026-02-16-dependency-chain.md
notebooks/: plan17_thesis_retest.ipynb  plan28_iteration_visibility.ipynb
prompts/: CLAUDE.md  agent_benchmark.yaml  agent_benchmark_adaptive.yaml  agent_benchmark_aot.yaml  agent_benchmark_baseline.yaml  agent_benchmark_codex_compact.yaml  agent_benchmark_consolidated.yaml  agent_benchmark_fixed_graph.yaml  agent_benchmark_hybrid.yaml  agent_benchmark_ptc.yaml  (+11 more)
(+295 files in other folders)
